
    - debian/patches/00list: Update.

    - debian/rules: Define NJOBS as 1.
    - debian/sysdeps/linux.mk: Define NJOBS based on number of processors
    - debian/rules.d/build.mk: Use -j $(NJOBS) during build.
    Based on patch from Ian Wienand <ianw@gelato.unsw.edu.au>

    - debian/debhelper.in/libc.install: Install pt_chown
    - debian/rules.d/debhelper.mk: Don't clobber SUID on pt_chown

 -- Daniel Jacobowitz <dan@debian.org>  Fri, 24 Oct 2003 20:30:59 -0400

glibc (2.3.2.ds1-6) experimental; urgency=low

  * Phil Blundell <pb@debian.org>

    - debian/patches/arm-ioperm.dpatch: New.

  * Daniel Jacobowitz <dan@debian.org>

    - Add debhelper build dependency.
    - Use linux-kernel-headers package for headers.
    - Add S/390 support.
    - Build libc6-dev-sparc64.

 -- Daniel Jacobowitz <dan@debian.org>  Mon, 20 Oct 2003 16:27:39 -0400

glibc (2.3.2.ds1-5) experimental; urgency=low

  * Daniel Jacobowitz <dan@debian.org>

    - Fix a thinko in i686 timing patch for non-HP_TIMING architectures.
    - Add -k to make check.

 -- Daniel Jacobowitz <dan@debian.org>  Mon, 13 Oct 2003 10:53:31 -0400

glibc (2.3.2.ds1-4) experimental; urgency=low

  * Daniel Jacobowitz <dan@debian.org>

    - Update i686 timing patch to fix clock_gettime.
    - Update glibc23-cmov patch to let ld load tls libraries from
      ld.so.cache.
    - Include symlinks in optimized library directories to placate
      dpkg-shlibdeps.
    - Fix shlibs files to include a version again.
    - Re-enable make check.
    - Update makeconfig.dpatch to fix a typo that broke make check.
    - Add glibc-make-check-perms.dpatch to fix an upstream make check
      problem.
    - Build some optimized libraries using appropriate --build options
      so that they can run make check.

  * Jeff Bailey <jbailey@nisa.net>

    - Build libraries for sparcv9 and sparc64.
    - Enable TLS for ia64.

 -- Daniel Jacobowitz <dan@debian.org>  Sun, 12 Oct 2003 19:42:11 -0400
